smokeping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smokeping
  labels:
    app: smokeping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smokeping
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      containers:
      - name: smokeping
        image: dperson/smokeping
        args: ["-w", "-t", "Home;google;www.google.com"]
        ports:
        - containerPort: 80
