ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /smokeping
        pathType: Prefix
        backend:
          service:
            name: smokeping
            port:
              number: 80
